[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/meteor.gd" type="Script" id=1]
[ext_resource path="res://assets/boulder.png" type="Texture" id=2]
[ext_resource path="res://assets/circle.png" type="Texture" id=3]
[ext_resource path="res://scenes/meteorHitbox.gd" type="Script" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 45.0
height = 0.0

[sub_resource type="CapsuleShape2D" id=2]
radius = 22.0
height = 56.0

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 64.5, 59.5 )

[node name="meteor" type="StaticBody2D"]
collision_layer = 192
collision_mask = 192
script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="indicator" type="Sprite" parent="."]
modulate = Color( 0.968627, 0.0705882, 0.0705882, 1 )
scale = Vector2( 1, 0.5 )
texture = ExtResource( 3 )

[node name="meteor" type="Sprite" parent="."]
position = Vector2( 0, -600 )
texture = ExtResource( 2 )
offset = Vector2( 0, -20 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -21 )
shape = SubResource( 1 )
disabled = true

[node name="Hitbox" type="Area2D" parent="." groups=["meteor"]]
collision_layer = 32
collision_mask = 32
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
rotation = 1.5708
shape = SubResource( 2 )
disabled = true

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 0
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2( 0.5, -26.5 )
shape = SubResource( 3 )
disabled = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
